edmm-core/src/test/resources/terraform/deploy.tf

provider "aws" {
  version = "~> 2.0"
  region = var.region
}

variable "region" {
  default = "eu-west-1"
}

variable "key_name" {
  default = "id_rsa"
}

variable "public_key_path" {
  default = "id_rsa.pub"
}

variable "ssh_user" {
  default = "ubuntu"
}

resource "aws_key_pair" "auth" {
  key_name = var.key_name
  public_key = file(var.public_key_path)
}

resource "aws_vpc" "default" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "default" {
  vpc_id = aws_vpc.default.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
}

resource "aws_internet_gateway" "default" {
  vpc_id = aws_vpc.default.id
}

resource "aws_security_group" "db_ubuntu_security_group" {
  name = "db_ubuntu_security_group"
  vpc_id = aws_vpc.default.id
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "db_ubuntu" {
  ami = "ami-0bbc25e23a7640b9b"
  instance_type = "t2.micro"
  key_name = aws_key_pair.auth.id
  vpc_security_group_ids = [aws_security_group.db_ubuntu_security_group.id]
  subnet_id = aws_subnet.default.id
  provisioner "remote-exec" {
    connection {
      type  = "ssh"
      user  = var.ssh_user
      agent = true
    }
    scripts = [
      "./ubuntu/configure.sh"
    ]
  }
  provisioner "remote-exec" {
    connection {
      type  = "ssh"
      user  = var.ssh_user
      agent = true
    }
    scripts = [
      "./mysql_database/configure.sh"
    ]
  }
}

resource "aws_security_group" "pet_clinic_ubuntu_security_group" {
  name = "pet_clinic_ubuntu_security_group"
  vpc_id = aws_vpc.default.id
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "pet_clinic_ubuntu" {
  ami = "ami-0bbc25e23a7640b9b"
  instance_type = "t2.micro"
  key_name = aws_key_pair.auth.id
  vpc_security_group_ids = [aws_security_group.pet_clinic_ubuntu_security_group.id]
  subnet_id = aws_subnet.default.id
  provisioner "remote-exec" {
    connection {
      type  = "ssh"
      user  = var.ssh_user
      agent = true
    }
    scripts = [
      "./ubuntu/configure.sh"
    ]
  }
  provisioner "remote-exec" {
    connection {
      type  = "ssh"
      user  = var.ssh_user
      agent = true
    }
    scripts = [
      "./tomcat/create.sh",
      "./tomcat/start.sh"
    ]
  }
  provisioner "remote-exec" {
    connection {
      type  = "ssh"
      user  = var.ssh_user
      agent = true
    }
    scripts = [
      "./petclinic/start.sh"
    ]
  }
  depends_on = [db_ubuntu]
}
